qt-restricted-extras/qscintilla/gen_qscilexer.h

class QColor;
class QFont;
class QMetaObject;
class QObject;
class QSettings;
class QsciAbstractAPIs;
class QsciLexer;
class QsciScintilla;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSettings QSettings;
typedef struct QTimerEvent QTimerEvent;
typedef struct QsciAbstractAPIs QsciAbstractAPIs;
typedef struct QsciLexer QsciLexer;
typedef struct QsciScintilla QsciScintilla;
bool QsciLexer_override_virtual_paper(void* self, intptr_t slot);
bool QsciLexer_override_virtual_defaultColorWithStyle(void* self, intptr_t slot);
QColor* QsciLexer_virtualbase_defaultColorWithStyle(const void* self, int style);
bool QsciLexer_override_virtual_defaultEolFill(void* self, intptr_t slot);
bool QsciLexer_virtualbase_defaultEolFill(const void* self, int style);
bool QsciLexer_override_virtual_defaultFontWithStyle(void* self, intptr_t slot);
QFont* QsciLexer_virtualbase_defaultFontWithStyle(const void* self, int style);
bool QsciLexer_override_virtual_defaultPaperWithStyle(void* self, intptr_t slot);
QColor* QsciLexer_virtualbase_defaultPaperWithStyle(const void* self, int style);
bool QsciLexer_override_virtual_setEditor(void* self, intptr_t slot);
void QsciLexer_virtualbase_setEditor(void* self, QsciScintilla* editor);
bool QsciLexer_override_virtual_refreshProperties(void* self, intptr_t slot);
void QsciLexer_virtualbase_refreshProperties(void* self);
bool QsciLexer_override_virtual_styleBitsNeeded(void* self, intptr_t slot);
int QsciLexer_virtualbase_styleBitsNeeded(const void* self);
bool QsciLexer_override_virtual_wordCharacters(void* self, intptr_t slot);
const char* QsciLexer_virtualbase_wordCharacters(const void* self);
bool QsciLexer_override_virtual_setAutoIndentStyle(void* self, intptr_t slot);
void QsciLexer_virtualbase_setAutoIndentStyle(void* self, int autoindentstyle);
bool QsciLexer_override_virtual_setColor(void* self, intptr_t slot);
void QsciLexer_virtualbase_setColor(void* self, QColor* c, int style);
bool QsciLexer_override_virtual_setEolFill(void* self, intptr_t slot);
void QsciLexer_virtualbase_setEolFill(void* self, bool eoffill, int style);
bool QsciLexer_override_virtual_setFont(void* self, intptr_t slot);
void QsciLexer_virtualbase_setFont(void* self, QFont* f, int style);
bool QsciLexer_override_virtual_setPaper(void* self, intptr_t slot);
void QsciLexer_virtualbase_setPaper(void* self, QColor* c, int style);
bool QsciLexer_override_virtual_readProperties(void* self, intptr_t slot);
bool QsciLexer_virtualbase_readProperties(void* self, QSettings* qs, struct miqt_string prefix);
bool QsciLexer_override_virtual_writeProperties(void* self, intptr_t slot);
bool QsciLexer_virtualbase_writeProperties(const void* self, QSettings* qs, struct miqt_string prefix);
bool QsciLexer_override_virtual_event(void* self, intptr_t slot);
bool QsciLexer_virtualbase_event(void* self, QEvent* event);
bool QsciLexer_override_virtual_eventFilter(void* self, intptr_t slot);
bool QsciLexer_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QsciLexer_override_virtual_timerEvent(void* self, intptr_t slot);
void QsciLexer_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QsciLexer_override_virtual_childEvent(void* self, intptr_t slot);
void QsciLexer_virtualbase_childEvent(void* self, QChildEvent* event);
bool QsciLexer_override_virtual_customEvent(void* self, intptr_t slot);
void QsciLexer_virtualbase_customEvent(void* self, QEvent* event);
bool QsciLexer_override_virtual_connectNotify(void* self, intptr_t slot);
void QsciLexer_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QsciLexer_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QsciLexer_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QsciLexer_staticMetaObject();
void QsciLexer_delete(QsciLexer* self);