qt-restricted-extras/qscintilla/gen_qscilexer.nim

proc fcQsciLexer_override_virtual_paper(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_paper".}
proc fQsciLexer_virtualbase_defaultColorWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexer_virtualbase_defaultColorWithStyle".}
proc fcQsciLexer_override_virtual_defaultColorWithStyle(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_defaultColorWithStyle".}
proc fQsciLexer_virtualbase_defaultEolFill(self: pointer, style: cint): bool{.importc: "QsciLexer_virtualbase_defaultEolFill".}
proc fcQsciLexer_override_virtual_defaultEolFill(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_defaultEolFill".}
proc fQsciLexer_virtualbase_defaultFontWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexer_virtualbase_defaultFontWithStyle".}
proc fcQsciLexer_override_virtual_defaultFontWithStyle(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_defaultFontWithStyle".}
proc fQsciLexer_virtualbase_defaultPaperWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexer_virtualbase_defaultPaperWithStyle".}
proc fcQsciLexer_override_virtual_defaultPaperWithStyle(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_defaultPaperWithStyle".}
proc fQsciLexer_virtualbase_setEditor(self: pointer, editor: pointer): void{.importc: "QsciLexer_virtualbase_setEditor".}
proc fcQsciLexer_override_virtual_setEditor(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_setEditor".}
proc fQsciLexer_virtualbase_refreshProperties(self: pointer, ): void{.importc: "QsciLexer_virtualbase_refreshProperties".}
proc fcQsciLexer_override_virtual_refreshProperties(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_refreshProperties".}
proc fQsciLexer_virtualbase_styleBitsNeeded(self: pointer, ): cint{.importc: "QsciLexer_virtualbase_styleBitsNeeded".}
proc fcQsciLexer_override_virtual_styleBitsNeeded(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_styleBitsNeeded".}
proc fQsciLexer_virtualbase_wordCharacters(self: pointer, ): cstring{.importc: "QsciLexer_virtualbase_wordCharacters".}
proc fcQsciLexer_override_virtual_wordCharacters(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_wordCharacters".}
proc fQsciLexer_virtualbase_setAutoIndentStyle(self: pointer, autoindentstyle: cint): void{.importc: "QsciLexer_virtualbase_setAutoIndentStyle".}
proc fcQsciLexer_override_virtual_setAutoIndentStyle(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_setAutoIndentStyle".}
proc fQsciLexer_virtualbase_setColor(self: pointer, c: pointer, style: cint): void{.importc: "QsciLexer_virtualbase_setColor".}
proc fcQsciLexer_override_virtual_setColor(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_setColor".}
proc fQsciLexer_virtualbase_setEolFill(self: pointer, eoffill: bool, style: cint): void{.importc: "QsciLexer_virtualbase_setEolFill".}
proc fcQsciLexer_override_virtual_setEolFill(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_setEolFill".}
proc fQsciLexer_virtualbase_setFont(self: pointer, f: pointer, style: cint): void{.importc: "QsciLexer_virtualbase_setFont".}
proc fcQsciLexer_override_virtual_setFont(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_setFont".}
proc fQsciLexer_virtualbase_setPaper(self: pointer, c: pointer, style: cint): void{.importc: "QsciLexer_virtualbase_setPaper".}
proc fcQsciLexer_override_virtual_setPaper(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_setPaper".}
proc fQsciLexer_virtualbase_readProperties(self: pointer, qs: pointer, prefix: struct_miqt_string): bool{.importc: "QsciLexer_virtualbase_readProperties".}
proc fcQsciLexer_override_virtual_readProperties(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_readProperties".}
proc fQsciLexer_virtualbase_writeProperties(self: pointer, qs: pointer, prefix: struct_miqt_string): bool{.importc: "QsciLexer_virtualbase_writeProperties".}
proc fcQsciLexer_override_virtual_writeProperties(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_writeProperties".}
proc fQsciLexer_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QsciLexer_virtualbase_event".}
proc fcQsciLexer_override_virtual_event(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_event".}
proc fQsciLexer_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QsciLexer_virtualbase_eventFilter".}
proc fcQsciLexer_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_eventFilter".}
proc fQsciLexer_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QsciLexer_virtualbase_timerEvent".}
proc fcQsciLexer_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_timerEvent".}
proc fQsciLexer_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QsciLexer_virtualbase_childEvent".}
proc fcQsciLexer_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_childEvent".}
proc fQsciLexer_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QsciLexer_virtualbase_customEvent".}
proc fcQsciLexer_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_customEvent".}
proc fQsciLexer_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QsciLexer_virtualbase_connectNotify".}
proc fcQsciLexer_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_connectNotify".}
proc fQsciLexer_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QsciLexer_virtualbase_disconnectNotify".}
proc fcQsciLexer_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QsciLexer_override_virtual_disconnectNotify".}
proc fcQsciLexer_staticMetaObject(): pointer {.importc: "QsciLexer_staticMetaObject".}
proc fcQsciLexer_delete(self: pointer) {.importc: "QsciLexer_delete".}


func init*(T: type QsciLexer, h: ptr cQsciLexer): QsciLexer =
  T(h: h)
proc create*(T: type QsciLexer, ): QsciLexer =

  QsciLexer.init(fcQsciLexer_new())
proc create*(T: type QsciLexer, parent: gen_qobject.QObject): QsciLexer =

  QsciLexer.init(fcQsciLexer_new2(parent.h))
proc metaObject*(self: QsciLexer, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQsciLexer_metaObject(self.h))

proc metacast*(self: QsciLexer, param1: cstring): pointer =

  fcQsciLexer_metacast(self.h, param1)

proc metacall*(self: QsciLexer, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQsciLexer_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QsciLexer, s: cstring): string =

  let v_ms = fcQsciLexer_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QsciLexer, s: cstring): string =

  let v_ms = fcQsciLexer_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc language*(self: QsciLexer, ): cstring =

  (fcQsciLexer_language(self.h))

proc lexer*(self: QsciLexer, ): cstring =

  (fcQsciLexer_lexer(self.h))

proc lexerId*(self: QsciLexer, ): cint =

  fcQsciLexer_lexerId(self.h)

proc apis*(self: QsciLexer, ): gen_qsciabstractapis.QsciAbstractAPIs =

  gen_qsciabstractapis.QsciAbstractAPIs(h: fcQsciLexer_apis(self.h))

proc autoCompletionFillups*(self: QsciLexer, ): cstring =

  (fcQsciLexer_autoCompletionFillups(self.h))

proc autoCompletionWordSeparators*(self: QsciLexer, ): seq[string] =

  var v_ma = fcQsciLexer_autoCompletionWordSeparators(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc autoIndentStyle*(self: QsciLexer, ): cint =

  fcQsciLexer_autoIndentStyle(self.h)

proc blockEnd*(self: QsciLexer, style: ptr cint): cstring =

  (fcQsciLexer_blockEnd(self.h, style))

proc blockLookback*(self: QsciLexer, ): cint =

  fcQsciLexer_blockLookback(self.h)

proc blockStart*(self: QsciLexer, style: ptr cint): cstring =

  (fcQsciLexer_blockStart(self.h, style))

proc blockStartKeyword*(self: QsciLexer, style: ptr cint): cstring =

  (fcQsciLexer_blockStartKeyword(self.h, style))

proc braceStyle*(self: QsciLexer, ): cint =

  fcQsciLexer_braceStyle(self.h)

proc caseSensitive*(self: QsciLexer, ): bool =

  fcQsciLexer_caseSensitive(self.h)

proc color*(self: QsciLexer, style: cint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciLexer_color(self.h, style))

proc eolFill*(self: QsciLexer, style: cint): bool =

  fcQsciLexer_eolFill(self.h, style)

proc font*(self: QsciLexer, style: cint): gen_qfont.QFont =

  gen_qfont.QFont(h: fcQsciLexer_font(self.h, style))

proc indentationGuideView*(self: QsciLexer, ): cint =

  fcQsciLexer_indentationGuideView(self.h)

proc keywords*(self: QsciLexer, set: cint): cstring =

  (fcQsciLexer_keywords(self.h, set))

proc defaultStyle*(self: QsciLexer, ): cint =

  fcQsciLexer_defaultStyle(self.h)

proc description*(self: QsciLexer, style: cint): string =

  let v_ms = fcQsciLexer_description(self.h, style)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc paper*(self: QsciLexer, style: cint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciLexer_paper(self.h, style))

proc defaultColor*(self: QsciLexer, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciLexer_defaultColor(self.h))

proc defaultColorWithStyle*(self: QsciLexer, style: cint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciLexer_defaultColorWithStyle(self.h, style))

proc defaultEolFill*(self: QsciLexer, style: cint): bool =

  fcQsciLexer_defaultEolFill(self.h, style)

proc defaultFont*(self: QsciLexer, ): gen_qfont.QFont =

  gen_qfont.QFont(h: fcQsciLexer_defaultFont(self.h))

proc defaultFontWithStyle*(self: QsciLexer, style: cint): gen_qfont.QFont =

  gen_qfont.QFont(h: fcQsciLexer_defaultFontWithStyle(self.h, style))

proc defaultPaper*(self: QsciLexer, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciLexer_defaultPaper(self.h))

proc defaultPaperWithStyle*(self: QsciLexer, style: cint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciLexer_defaultPaperWithStyle(self.h, style))

proc editor*(self: QsciLexer, ): gen_qsciscintilla.QsciScintilla =

  gen_qsciscintilla.QsciScintilla(h: fcQsciLexer_editor(self.h))

proc setAPIs*(self: QsciLexer, apis: gen_qsciabstractapis.QsciAbstractAPIs): void =

  fcQsciLexer_setAPIs(self.h, apis.h)

proc setDefaultColor*(self: QsciLexer, c: gen_qcolor.QColor): void =

  fcQsciLexer_setDefaultColor(self.h, c.h)

proc setDefaultFont*(self: QsciLexer, f: gen_qfont.QFont): void =

  fcQsciLexer_setDefaultFont(self.h, f.h)

proc setDefaultPaper*(self: QsciLexer, c: gen_qcolor.QColor): void =

  fcQsciLexer_setDefaultPaper(self.h, c.h)

proc setEditor*(self: QsciLexer, editor: gen_qsciscintilla.QsciScintilla): void =

  fcQsciLexer_setEditor(self.h, editor.h)

proc readSettings*(self: QsciLexer, qs: gen_qsettings.QSettings): bool =

  fcQsciLexer_readSettings(self.h, qs.h)

proc refreshProperties*(self: QsciLexer, ): void =

  fcQsciLexer_refreshProperties(self.h)

proc styleBitsNeeded*(self: QsciLexer, ): cint =

  fcQsciLexer_styleBitsNeeded(self.h)

proc wordCharacters*(self: QsciLexer, ): cstring =

  (fcQsciLexer_wordCharacters(self.h))

proc writeSettings*(self: QsciLexer, qs: gen_qsettings.QSettings): bool =

  fcQsciLexer_writeSettings(self.h, qs.h)

proc setAutoIndentStyle*(self: QsciLexer, autoindentstyle: cint): void =

  fcQsciLexer_setAutoIndentStyle(self.h, autoindentstyle)
